# pinmame-nvram

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  update-submodule.sh
.github/: dependabot.yml
.github/workflows/: clippy.yml  (+2 more)
src/: checksum.rs  dips.rs  encoding.rs  index.rs  lib.rs  model.rs  resolve.rs
testdata/: aaa_expected_checksum_mismatches.txt  aaa_expected_warnings.txt  aaa_missing_nvrams.txt  aar_101.nv  aar_101.nv.json  abv106.nv  abv106.nv.json  abv106r.nv  abv106r.nv.json  acd_170.nv  acd_170.nv.json  acd_170h.nv  acd_170h.nv.json  afm_113.nv.json  afm_113b-buyin.nv.json  afm_113b.nv.json  algar_l1.nv  algar_l1.nv.json  ali.nv  ali.nv.json  alpok_l6.nv  alpok_l6.nv.json  andretti.nv  andretti.nv.json  apollo13.nv  apollo13.nv.json  arena.nv  arena.nv.json  austin.nv  austin.nv.json  avs_170.nv  badgirls.nv  badgirls.nv.json  barbwire.nv  barbwire.nv.json  barra_l1.nv.json  batmanf.nv  batmanf.nv.json  baywatch.nv  baywatch.nv.json  (+620 more)
tests/: 80b-7digit-8KB.rs  nv_afm_113b.rs  nv_barra_l1.rs  nv_bcats_l5.rs  nv_bguns_l8.rs  nv_bk2k_l4.rs  nv_bk_l4.rs  nv_bnzai_l3.rs  nv_btmn_106.rs  nv_centaur.rs  nv_csmic_l1.rs  nv_cycln_l5.rs  nv_dfndr_l4.rs  nv_dh_lx2.rs  nv_diner_l4.rs  nv_dm_lx4.rs  nv_drac_l1.rs  nv_dracula.rs  nv_dvlrider.rs  nv_dw_l2.rs  nv_eatpm_l4.rs  nv_esha.rs  nv_f14_l1.rs  nv_farfalla.rs  nv_fh_905h.rs  nv_fh_l9.rs  nv_fpwr2_l2.rs  nv_freddy.rs  nv_gldneye.rs  nv_gmine_l2.rs  nv_hd_l3.rs  nv_hod.rs  nv_hs_l4.rs  nv_hypbl_l6.rs  nv_jm_12r.rs  nv_jngld_l2.rs  nv_jokrz_l6.rs  nv_jplstw22.rs  nv_jst_l2.rs  nv_lsrcu_l2.rs  (+42 more)
