[package]
name = "pinmame-nvram"
description = "Rust library handling PinMAME NVRAM files"
license = "MIT"
repository = "https://github.com/francisdb/pinmame-nvram"
readme = "README.md"
documentation = "https://docs.rs/vpin"

keywords = ["pinmame", "emulation", "mame", "virtual-pinball"]
categories = ["game-engines", "game-development"]
version = "0.4.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
include_dir = "0.7.4"
brotli = "8.0.0"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
testdir = "0.9.1"
walkdir = "2.5.0"

[build-dependencies]
brotli = "8.0.0"
serde_json = "1.0.133"
